--- a/muzik-frontend/package.json
+++ b/muzik-frontend/package.json
@@ -13,9 +13,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.485.0",
+    "motion": "^12.6.2",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-motion": "^0.5.2",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
