--- a/muzik-frontend/package.json
+++ b/muzik-frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@tabler/icons-react": "^3.31.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.485.0",
     "motion": "^12.6.2",
     "next": "15.2.4",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
