--- a/muzik-backend/package.json
+++ b/muzik-backend/package.json
@@ -1,9 +1,17 @@
 {
   "scripts": {
-    "build": "node app.js",
-    "start": "node app.js"
+    "build": "babel src --out-dir src/dist",
+    "start": "node dist/app.js",
+    "dev": "nodemon --exec babel-node app.js"
   },
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "eslint": "^8.29.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -17,6 +25,10 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/node": "^7.26.0",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/register": "^7.25.9",
     "nodemon": "^3.1.9"
   }
 }
