--- a/muzik-frontend/package.json
+++ b/muzik-frontend/package.json
@@ -34,6 +34,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-motion": "^0.5.2",
+    "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
